Fix vip discord modal style on mobile (#310)

--- a/packages/web/src/containers/audio-rewards-page/components/modals/ModalDrawer.module.css
+++ b/packages/web/src/containers/audio-rewards-page/components/modals/ModalDrawer.module.css
@@ -12,7 +12,7 @@
   max-height: 90vh;
 }
 
-.modalBody path {
+.modalBody.gradientHeader path {
   fill: var(--static-white);
 }
 
